Article alignment fixes - tablet and mobile

--- a/_includes/styles/style.css
+++ b/_includes/styles/style.css
@@ -388,6 +388,10 @@ form#search_form h4 {font-size: 1em;}
 form#search_form input[type="search"] {margin: 0 .5em 0 0; padding: 0;  display: inline-block;}
 form#search_form input[type="submit"] { margin: .25em 0 0 0; display: inline-block; }
 
+/*** Article ***/
+
+article {display: block; clear: both;}
+
 /************************************************************************************
 MOBILE
 *************************************************************************************/
